--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="conteiner_works-humburger">
-          <svg id="humburger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="35px" viewbox="0 0 40 35" enable-background="new 0 0 40 35" xml:space="preserve">
+          <svg id="humburger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="45px" height="35px" viewbox="0 0 40 35" enable-background="new 0 0 40 35" xml:space="preserve">
             <path id="humburger_line1" fill="#fff" fill-opacity=".5" d="M40,2.5C40,3.881,38.881,5,37.5,5h-35C1.119,5,0,3.881,0,2.5l0,0C0,1.119,1.119,0,2.5,0h35                           C38.881,0,40,1.119,40,2.5L40,2.5z"></path>
             <path id="humburger_line2" fill="#fff" fill-opacity=".5" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35                           C38.881,15,40,16.119,40,17.5L40,17.5z"></path>
             <path id="humburger_line3" fill="#fff" fill-opacity=".5" d="M40,32.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,35,0,33.881,0,32.5l0,0C0,31.119,1.119,30,2.5,30h35                           C38.881,30,40,31.119,40,32.5L40,32.5z"></path>
@@ -99,29 +99,29 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name1">HTML5 &amp; PUG(jade)</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name2">CSS3 $ PostCSS</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name3">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name3">JS EC6 &amp; jQuery</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name4">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name4">SASS &amp; LESS</div>
                 </li>
@@ -136,15 +136,15 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name1">node.js &amp; express</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name2">MongoDB</div>
                 </li>
@@ -154,29 +154,29 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name1">bootstrap</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name2">GIT</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name3">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name3">Gulp</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name4">
-                    <circle stroke="#ccc"></circle>
-                    <circle stroke="#e8a731"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
                   </svg>
                   <div class="skills__item--text name4">NPM &amp; Bower</div>
                 </li>
