--- a/works.html
+++ b/works.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="conteiner_works-humburger">
-          <svg id="humburger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="35px" viewbox="0 0 40 35" enable-background="new 0 0 40 35" xml:space="preserve">
+          <svg id="humburger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="45px" height="35px" viewbox="0 0 40 35" enable-background="new 0 0 40 35" xml:space="preserve">
             <path id="humburger_line1" fill="#fff" fill-opacity=".5" d="M40,2.5C40,3.881,38.881,5,37.5,5h-35C1.119,5,0,3.881,0,2.5l0,0C0,1.119,1.119,0,2.5,0h35                           C38.881,0,40,1.119,40,2.5L40,2.5z"></path>
             <path id="humburger_line2" fill="#fff" fill-opacity=".5" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35                           C38.881,15,40,16.119,40,17.5L40,17.5z"></path>
             <path id="humburger_line3" fill="#fff" fill-opacity=".5" d="M40,32.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,35,0,33.881,0,32.5l0,0C0,31.119,1.119,30,2.5,30h35                           C38.881,30,40,31.119,40,32.5L40,32.5z"></path>
@@ -161,10 +161,10 @@
             <div class="conteiner_center-up--textback"> Отправить e-mail</div>
             <div class="conteiner_center-up--autoback position-Zindex">
               <form class="conteiner_center-up--form">
-                <div class="conteiner_center-up--dsail padding_correct">
+                <div class="conteiner_center-up--dsail padding_correct correxrheigt">
                   <input class="conteiner_center-up--input bor-rad" type="text" name="posName" placeholder="Имя" required id="name">
                 </div>
-                <div class="conteiner_center-up--dsail padding_correct">
+                <div class="conteiner_center-up--dsail padding_correct correxrheigt">
                   <input class="conteiner_center-up--input bor-rad" type="email" name="posEmail" placeholder="Email" required id="email">
                 </div>
                 <div class="conteiner_center-up--dsail padding_correct">
