--- a/about.html
+++ b/about.html
@@ -99,29 +99,29 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name1">HTML5 &amp; PUG(jade)</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name2">CSS3 $ PostCSS</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name3">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name3">JS EC6 &amp; jQuery</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name4">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name4">SASS &amp; LESS</div>
                 </li>
@@ -136,15 +136,15 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name1">node.js &amp; express</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name2">MongoDB</div>
                 </li>
@@ -154,29 +154,29 @@
               <ul class="skills">
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name1">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name1">bootstrap</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name2">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name2">GIT</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name3">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name3">Gulp</div>
                 </li>
                 <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name4">
-                    <circle stroke="#ccc" cx="75" cy="75" r="65"></circle>
-                    <circle stroke="#e8a731" cx="75" cy="75" r="65"></circle>
+                    <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
+                    <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
                   <div class="skills__item--text name4">NPM &amp; Bower</div>
                 </li>
