--- a/about.html
+++ b/about.html
@@ -153,14 +153,14 @@
                     <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
                     <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
-                  <div class="skills__item--text name2">Java 1.7 Core/div>
+                  <div class="skills__item--text name2">Java1.7Core</div>
                 </li>
                   <li class="skills__item ">
                   <svg class="skills__item--svg skills__item--name4">
                     <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
                     <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
-                  <div class="skills__item--text name2">Oracle/PostgreSQL/div>
+                  <div class="skills__item--text name2">Oracle/PLSQL</div>
                 </li>  
               </ul>
           </div>
