--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
                     <circle stroke="#ccc" cx="75" cy="75" r="65" stroke-width="20"></circle>
                     <circle stroke="#e8a731" cx="75" cy="75" r="65" stroke-width="20"></circle>
                   </svg>
-                  <div class="skills__item--text name4">NPM &amp; Bower</div>
+                  <div class="skills__item--text name4">NPM(yarn) &amp; Bower</div>
                 </li>
               </ul>
           </div>
